--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,14 @@
 
 <div class="d-flex">
 
-  <app-side-bar></app-side-bar>
+  <div>
+    <app-side-bar></app-side-bar>
+  </div>
 
-  <router-outlet></router-outlet>
+  <div>
+    <router-outlet></router-outlet>
+  </div>
 
 </div>
 
-
+<app-footer></app-footer>
