--- a/src/app/views/customer-edit/customer-edit.component.html
+++ b/src/app/views/customer-edit/customer-edit.component.html
@@ -1,1 +1,21 @@
-<p>customer-edit works!</p>
+<form>
+
+  <div class="mb-3">
+    <label class="form-label" for="customerName">Name</label>
+    <input type="text" class="form-control" id="customerName" [(ngModel)]="customer.name" name="customerName" required>
+  </div>
+
+  <!-- <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div> -->
+
+  <button type="submit" class="btn btn-primary" (click)="onClick()">Submit</button>
+  
+  {{ customer | json }}
+</form>
