--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -1,13 +1,13 @@
-<div class="d-flex flex-column flex-shrink-0 p-3 text-white">
-  <ul class="nav nav-pills flex-column mb-auto">
+<div class="d-flex p-3">
+  <ul class="nav nav-pills flex-column">
     <li>
-      <a routerLink="/" class="nav-link pe-4">
+      <a routerLink="/" class="nav-link">
         <i class="bi bi-house-fill me-2"></i>
         Home
       </a>
     </li>
     <li>
-      <a routerLink="/customers/list" class="nav-link pe-4">
+      <a routerLink="/customers/list" class="nav-link">
         <i class="bi bi-people-fill me-2"></i>
         Customers
       </a>
