--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,16 @@
 
 <div class="d-flex">
 
-  <div>
+  <!-- <div>
     <app-side-bar></app-side-bar>
-  </div>
+  </div> -->
 
-  <div>
+  <div class="container">
     <router-outlet></router-outlet>
   </div>
 
 </div>
 
-<app-footer></app-footer>
+<!-- <div class="container">
+  <app-footer></app-footer>
+</div> -->
