--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,23 +4,27 @@
   </div>
 </nav> -->
 <div class="container">
-  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+  <header
+    class="sticky-top d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom" >
     <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
       <!-- <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg> -->
       <i class="bi bi-house fs-1"></i>
     </a>
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-      <li><a href="#" class="nav-link px-2 link-dark">Features</a></li>
-      <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
-      <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
-      <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
+      <li><a routerLink="/" class="nav-link link-dark px-2">Home</a></li>
+      <li><a routerLink="/customers/list" class="nav-link link-dark px-2">Customers</a></li>
+      <li><a routerLink="/decks/list" class="nav-link link-dark px-2">Decking</a></li>
+      <li><a href="#" class="nav-link link-secondary px-2">Roofing</a></li>
+      <li><a href="#" class="nav-link link-secondary px-2">Siding</a></li>
+      <li><a href="#" class="nav-link link-secondary px-2">Admin</a></li>
     </ul>
 
     <div class="col-md-3 text-end">
-      <button type="button" class="btn btn-outline-primary me-2">Login</button>
-      <button type="button" class="btn btn-primary">Sign-up</button>
+      <!-- <button type="button" class="btn btn-outline-primary me-2">Login</button> -->
+      <button class="btn btn-primary">
+        <i class=" fs-5 bi bi-person-fill"></i>
+      </button>
     </div>
   </header>
 </div>
