--- a/src/app/views/customer-edit/customer-edit.component.html
+++ b/src/app/views/customer-edit/customer-edit.component.html
@@ -1,21 +1,33 @@
+<h2>Customers</h2>
+
 <form>
 
   <div class="mb-3">
-    <label class="form-label" for="customerName">Name</label>
-    <input type="text" class="form-control" id="customerName" [(ngModel)]="customer.name" name="customerName" required>
+    <label class="form-label" for="name">Name</label>
+    <input type="text" class="form-control" id="name" name="name" [(ngModel)]="customer.name">
   </div>
 
-  <!-- <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+  <div class="mb-3">
+    <label class="form-label" for="address">Address</label>
+    <textarea class="form-control" id="address" name="address" rows="3" [(ngModel)]="customer.address"></textarea>
   </div>
 
-  <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div> -->
+  <div class="row">
+    <div class="col mb-3">
+      <label class="form-label" for="phone">Phone</label>
+      <input type="text" class="form-control" id="phone" name="phone" [(ngModel)]="customer.phone">
+    </div>
 
-  <button type="submit" class="btn btn-primary" (click)="onClick()">Submit</button>
-  
-  {{ customer | json }}
+    <div class="col mb-3">
+      <label class="form-label" for="email">Email</label>
+      <input type="text" class="form-control" id="email" name="email" [(ngModel)]="customer.email">
+    </div>
+  </div>
+
+  <div class="d-flex justify-content-end">
+    <button *ngIf="creatingCustomer" type="submit" class="btn btn-primary" (click)="createCustomer()">Submit</button>
+    <button *ngIf="!creatingCustomer" type="submit" class="btn btn-primary" (click)="updateCustomer()">Submit</button>
+  </div>
 </form>
+
+{{ customer | json }}
