--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,9 +14,7 @@
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
       <li><a routerLink="/" class="nav-link link-dark px-2">Home</a></li>
       <li><a routerLink="/customers/list" class="nav-link link-dark px-2">Customers</a></li>
-      <li><a routerLink="/decks/list" class="nav-link link-dark px-2">Decking</a></li>
-      <li><a href="#" class="nav-link link-secondary px-2">Roofing</a></li>
-      <li><a href="#" class="nav-link link-secondary px-2">Siding</a></li>
+      <li><a routerLink="/quotes/list" class="nav-link link-dark px-2">Quotes</a></li>
       <li><a href="#" class="nav-link link-secondary px-2">Admin</a></li>
     </ul>
 
