--- a/src/app/views/customer-edit/customer-edit.component.html
+++ b/src/app/views/customer-edit/customer-edit.component.html
@@ -4,29 +4,28 @@
 
   <div class="mb-3">
     <label class="form-label" for="name">Name</label>
-    <input type="text" class="form-control" id="name" name="name" [(ngModel)]="customer.name">
+    <input type="text" class="form-control" id="name" name="name" [(ngModel)]="customer!.name">
   </div>
 
   <div class="mb-3">
     <label class="form-label" for="address">Address</label>
-    <textarea class="form-control" id="address" name="address" rows="3" [(ngModel)]="customer.address"></textarea>
+    <textarea class="form-control" id="address" name="address" rows="3" [(ngModel)]="customer!.address"></textarea>
   </div>
 
   <div class="row">
     <div class="col mb-3">
       <label class="form-label" for="phone">Phone</label>
-      <input type="text" class="form-control" id="phone" name="phone" [(ngModel)]="customer.phone">
+      <input type="text" class="form-control" id="phone" name="phone" [(ngModel)]="customer!.phone">
     </div>
 
     <div class="col mb-3">
       <label class="form-label" for="email">Email</label>
-      <input type="text" class="form-control" id="email" name="email" [(ngModel)]="customer.email">
+      <input type="text" class="form-control" id="email" name="email" [(ngModel)]="customer!.email">
     </div>
   </div>
 
   <div class="d-flex justify-content-end">
-    <button *ngIf="creatingCustomer" type="submit" class="btn btn-primary" (click)="createCustomer()">Submit</button>
-    <button *ngIf="!creatingCustomer" type="submit" class="btn btn-primary" (click)="updateCustomer()">Submit</button>
+    <button class="btn btn-primary" (click)="submit()">Submit</button>
   </div>
 </form>
 
