--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,7 @@
 
 <div class="d-flex">
 
-  <!-- <div>
-    <app-side-bar></app-side-bar>
-  </div> -->
-
-  <div class="container">
+  <div class="container-lg">
     <router-outlet></router-outlet>
   </div>
 
