--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,28 +1,38 @@
-<!-- <nav class="navbar navbar bg-dark sticky-top bg-body-tertiary" data-bs-theme="dark">
+<!-- <nav class="navbar navbar bg-dark sticky-top bg-body-emphasis" data-bs-theme="dark">
   <div class="container-fluid">
+    <a class="navbar-brand" href="#">Sticky top</a>
+    <a class="navbar-brand" href="#">Sticky top</a>
+    <a class="navbar-brand" href="#">Sticky top</a>
     <a class="navbar-brand" href="#">Sticky top</a>
   </div>
 </nav> -->
-<div class="container">
-  <header
-    class="sticky-top d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom" >
-    <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-      <!-- <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg> -->
-      <i class="bi bi-house fs-1"></i>
-    </a>
 
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a routerLink="/" class="nav-link link-dark px-2">Home</a></li>
-      <li><a routerLink="/customers/list" class="nav-link link-dark px-2">Customers</a></li>
-      <li><a routerLink="/quotes/list" class="nav-link link-dark px-2">Quotes</a></li>
-      <li><a href="#" class="nav-link link-secondary px-2">Admin</a></li>
-    </ul>
+<header>
+  <div class="navbar bg-primary-subtle d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-5 border-bottom" data-bs-theme="dark">
+    
+    <div class="container">
+      <a routerLink="/landing" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-decoration-none">
+        <i class="bi bi-house fs-1 "></i>
+      </a>
 
-    <div class="col-md-3 text-end">
-      <!-- <button type="button" class="btn btn-outline-primary me-2">Login</button> -->
-      <button class="btn btn-primary">
-        <i class=" fs-5 bi bi-person-fill"></i>
-      </button>
+      <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <a class="nav-link px-2 fs-6" routerLink="/">Home</a>
+        <a class="nav-link px-2 fs-6" routerLink="/customers">Customers</a>
+        <!-- <a class="nav-link px-2 fs-6" routerLink="/quotes/list">Quotes</a> -->
+        <a class="nav-link disabled px-2 fs-6" href="#">Admin</a>
+      </div>
+
+      <div class="col-md-3 text-end">
+        <button type="button" class="btn btn-outline-primary me-2">
+          Sing up
+        </button>
+        <button type="button" class="btn btn-outline-primary me-2">
+          Sing in
+        </button>
+        <button class="btn btn-link">
+          <i class="fs-5 bi bi-person-fill"></i>
+        </button>
+      </div>
     </div>
-  </header>
-</div>
+  </div>
+</header>
