--- a/src/app/views/customer-edit/customer-edit.component.html
+++ b/src/app/views/customer-edit/customer-edit.component.html
@@ -1,32 +1,80 @@
-<h2>Customers</h2>
-
-<form>
-
-  <div class="mb-3">
-    <label class="form-label" for="name">Name</label>
-    <input type="text" class="form-control" id="name" name="name" [(ngModel)]="customer!.name">
+<div class="d-flex mb-5">
+  <div class="border-bottom flex-fill pb-2">
+    <h2>Customer {{ this.customerId != 'new' ? 'Edit' : 'Create'}}</h2>
   </div>
 
-  <div class="mb-3">
-    <label class="form-label" for="address">Address</label>
-    <textarea class="form-control" id="address" name="address" rows="3" [(ngModel)]="customer!.address"></textarea>
-  </div>
+  <div class="border-bottom">
 
-  <div class="row">
-    <div class="col mb-3">
-      <label class="form-label" for="phone">Phone</label>
-      <input type="text" class="form-control" id="phone" name="phone" [(ngModel)]="customer!.phone">
+    <button class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteCustomerModal"
+      (click)="updateCustomerToDelete(customer)">
+      <i class="bi bi-trash-fill"></i>
+    </button>
+
+    <!-- Delete modal -->
+    <div class="modal fade" id="deleteCustomerModal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Delete Customer</h5>
+            <button class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+
+          <div class="modal-body">
+            <p>Are you sure to delete this customer?</p>
+            <p class="text-muted">{{customerToDelete?.name}}</p>
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">No</button>
+            <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal"
+              (click)="deleteCustomer()">Yes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="card mb-4">
+  <div class="card-body">
+    <div class="row">
+
+      <div class="col-md-6 col-sm-12">
+        <div class="mb-3">
+          <label class="form-label" for="name">Name</label>
+          <input type="text" class="form-control" id="name" name="name" [(ngModel)]="customer.name">
+        </div>
+      </div>
+
+      <div class="col-md-6 col-sm-12">
+        <div class="mb-3">
+          <label class="form-label" for="address">Home Address</label>
+          <textarea class="form-control" id="address" name="address" rows="3" [(ngModel)]="customer.address"></textarea>
+        </div>
+      </div>
     </div>
 
-    <div class="col mb-3">
-      <label class="form-label" for="email">Email</label>
-      <input type="text" class="form-control" id="email" name="email" [(ngModel)]="customer!.email">
-    </div>
-  </div>
 
-  <div class="d-flex justify-content-end">
-    <button class="btn btn-primary" (click)="submit()">Submit</button>
+
+    <div class="row">
+      <div class="col mb-3">
+        <label class="form-label" for="phone">Phone</label>
+        <input type="text" class="form-control" id="phone" name="phone" [(ngModel)]="customer.phone">
+      </div>
+
+      <div class="col mb-3">
+        <label class="form-label" for="email">Email</label>
+        <input type="text" class="form-control" id="email" name="email" [(ngModel)]="customer.email">
+      </div>
+    </div>
+
   </div>
-</form>
+</div>
+
+<div class="d-flex justify-content-end">
+  <button class="btn btn-secondary me-3" (click)="submit()">Cancel</button>
+  <button class="btn btn-primary" (click)="submit()">Save</button>
+</div>
 
 {{ customer | json }}
