--- a/src/app/views/customer-list/customer-list.component.html
+++ b/src/app/views/customer-list/customer-list.component.html
@@ -1,19 +1,26 @@
-<h2>Customers</h2>
 
-<div class="d-flex justify-content-end">
-  <button class="btn btn-primary" [routerLink]="[ '/customers/new' ]">
-    <i class="bi bi-plus-circle-fill"></i>
-  </button>
+<div class="d-flex mb-5">
+  <div class="border-bottom flex-fill pb-2">
+    <h2>Customers</h2>
+  </div>
+
+  <div class="border-bottom">
+    <button class="btn btn-outline-primary" [routerLink]="[ '/customers/new' ]">
+      <i class="bi bi-plus"></i>
+      New
+    </button>
+  </div>
 </div>
+
 
 <table class="table table-hover">
   <thead>
-    <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Address</th>
-      <th scope="col">Email</th>
-      <th scope="col">Phone</th>
-      <th scope="col">Actions</th>
+    <tr class="table-light">
+      <th >Name</th>
+      <th >Address</th>
+      <th >Email</th>
+      <th >Phone</th>
+      <th >Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -22,36 +29,17 @@
       <td> {{ customer.address }} </td>
       <td> {{ customer.email }} </td>
       <td> {{ customer.phone }} </td>
-      <td class="d-flex justify-content-center">
+      <td class="d-flex">
 
-        <button class="btn btn-primary btn-sm me-1" [routerLink]="[ '/customers/edit/', customer.id ]">
+        <button class="btn btn-primary btn-sm me-2" [routerLink]="[ '/customers', customer.id ]" 
+        data-toggle="tooltip" data-placement="bottom" title="Edit">
           <i class="bi bi-pencil-fill"></i>
         </button>
-
-        <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#deleteCustomerModal"
-          (click)="updateCustomerToDelete(customer)">
-          <i class="bi bi-trash-fill"></i>
+        
+        <button class="btn btn-success btn-sm me-2" [routerLink]="[ '/customers', customer.id, 'quotes' ]"
+        data-toggle="tooltip" data-placement="bottom" title="Quotes">
+          <i class="bi bi-currency-dollar"></i>
         </button>
-
-        <div class="modal fade" id="deleteCustomerModal" tabindex="-1">
-          <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title">Delete Customer</h5>
-                <button class="btn-close" data-bs-dismiss="modal"></button>
-              </div>
-              <div class="modal-body">
-                <p>Are you sure to delete this customer?</p>
-                <p class="text-muted">{{customerToDelete?.name}}</p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
-                  (click)="deleteCustomer()">Yes</button>
-              </div>
-            </div>
-          </div>
-        </div>
 
       </td>
     </tr>
