--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,40 +1,89 @@
-<h1 class="mb-3">
-  wQuote
-</h1>
-
-<p class="mb-5">
-  it's a webApp that helps you to quote and estimate yours buildings projects.
-</p>
-
-
-<div class="d-flex justify-content-evenly">
-
-  <div class="card text-center mx-2">
-    <div class="card-body">
-      <h4 class="card-title">Decking</h4>
-      <p class="card-text py-4 border-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, adipisci similique aliquam molestiae, cumque facere quibusdam quod accusamus vitae aperiam accusantium debitis hic est voluptas veniam, doloribus nam. Dolorem, accusamus.</p>
-      <a [routerLink]="[ '/decks/new' ]" class="btn btn-primary">Quote</a>
-    </div>
+<div class="d-flex mb-5">
+  <div class="border-bottom flex-fill">
+    <h2 class="pb-2">Latest Quotes</h2>
   </div>
 
-  <div class="card text-center mx-2">
-    <div class="card-header bg-primary-subtle">
-      <h5>Roofing</h5>
-    </div>
-    <div class="card-body">
-      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae illum maiores magni ducimus tenetur cum repellendus neque deleniti, magnam, cupiditate necessitatibus nam totam, nihil architecto doloremque rem non beatae esse!</p>
-      <a [routerLink]="[ '/roofs/new' ]" class="btn btn-primary">Quote</a>
-    </div>
-  </div>
+  <!-- <div class="border-bottom">
 
-  <div class="card text-center mx-2 bg-primary-subtle">
-    <div class="card-body">
-      <h5 class="card-title">Siding</h5>
-      <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id in vitae nemo doloremque dolore quam eligendi, asperiores placeat iste saepe voluptatibus temporibus voluptatum pariatur earum ab doloribus praesentium harum corrupti.</p>
-    </div>
-    <div class="card-footer">
-      <a [routerLink]="[ '/sides/new' ]" class="btn btn-primary">Quote</a>
-    </div>
-  </div>
-
+    <button class="btn btn-outline-primary" id="dropdownMenuButton" data-bs-toggle="dropdown">
+      <i class="bi bi-plus"></i>
+      New
+    </button>
+    
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" routerLink="/quotes/decks/new">Decking </a></li>
+      <li><a class="dropdown-item" href="#">Roofing</a></li>
+      <li><a class="dropdown-item" href="#">Siding</a></li>
+    </ul>
+  </div> -->
 </div>
+
+<table class="table table-hover">
+  <thead>
+    <tr class="table-light">
+      <th >#</th>
+      <th >Customer</th>
+      <th >Type</th>
+      <th >Date</th>
+      <th >Profit</th>
+      <th >Total Cost</th>
+      <th >Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let quote of quotes; index as index">
+      <td> {{ index + 1 }} </td>
+      <td> {{ getCustomerName(quote.id_customer) }} </td>
+      <td> {{ quote.type }} </td>
+      <td> {{ quote.date | date }} </td>
+      <td> {{ quote.profit.toFixed(2) }} </td>
+      <td> {{ quote.total_cost.toFixed(2) }} </td>
+
+      <!-- Actions -->
+      <td class="d-flex">
+        <!-- Button Edit -->
+        <button class="btn btn-primary btn-sm me-2" [routerLink]="[ '/quotes/'+quote.type+'s/', quote.id ]">
+          <i class="bi bi-pencil-fill"></i>
+        </button>
+
+        <!-- Button Duplicate -->
+        <button class="btn btn-warning btn-sm me-2" [routerLink]="[ '/quotes/'+quote.type+'s/', quote.id ]">
+          <i class="bi bi-stickies-fill"></i>
+        </button>
+
+        <!-- Button Delete -->
+        <!-- <button class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteCustomerModal"
+          (click)="updateQuoteToDelete(quote)">
+          <i class="bi bi-trash-fill"></i>
+        </button> -->
+
+        <!-- Modal -->
+        <div class="modal fade" id="deleteCustomerModal" tabindex="-1">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+
+              <div class="modal-header">
+                <h5 class="modal-title">Delete Quote</h5>
+                <button class="btn-close" data-bs-dismiss="modal"></button>
+              </div>
+
+              <div class="modal-body">
+                <p>Are you sure to delete this quote?</p>
+                <p class="text-muted">{{ quoteToDelete?.id }}</p>
+              </div>
+
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">No</button>
+                <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal"
+                  (click)="deleteQuote()">Yes</button>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+      </td>
+    </tr>
+
+  </tbody>
+</table>
