--- a/src/app/views/quote-list/quote-list.component.html
+++ b/src/app/views/quote-list/quote-list.component.html
@@ -1,15 +1,15 @@
-<h2>Quotes</h2>
+<div class="d-flex mb-5">
+  <div class="border-bottom flex-fill">
+    <h2 class="pb-2">Quotes</h2>
+  </div>
 
-<div class="d-flex justify-content-end">
-  <!-- <button class="btn btn-primary dropdown" [routerLink]="[ '/quotes/decks/new' ]">
-    <i class="bi bi-plus-circle-fill"></i>
-  </button> -->
+  <div class="border-bottom">
 
-  <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown">
-      <i class="bi bi-plus-fill"></i>
-      New Quote
+    <button class="btn btn-primary" id="dropdownMenuButton1" data-bs-toggle="dropdown">
+      <i class="bi bi-plus"></i>
+      New
     </button>
+    
     <ul class="dropdown-menu">
       <li><a class="dropdown-item" routerLink="/quotes/decks/new">Decking </a></li>
       <li><a class="dropdown-item" href="#">Roofing</a></li>
@@ -20,14 +20,14 @@
 
 <table class="table table-hover">
   <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Customer</th>
-      <th scope="col">Type</th>
-      <th scope="col">Date</th>
-      <th scope="col">Profit</th>
-      <th scope="col">Total Cost</th>
-      <th scope="col">Actions</th>
+    <tr class="table-light">
+      <th >#</th>
+      <th >Customer</th>
+      <th >Type</th>
+      <th >Date</th>
+      <th >Profit</th>
+      <th >Total Cost</th>
+      <th >Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -42,12 +42,12 @@
       <!-- Actions -->
       <td class="d-flex">
         <!-- Button Edit -->
-        <button class="btn btn-primary btn-sm me-1" [routerLink]="[ '/quotes/'+quote.type+'s/edit/', quote.id ]">
+        <button class="btn btn-primary btn-sm me-2" [routerLink]="[ '/quotes/'+quote.type+'s/edit/', quote.id ]">
           <i class="bi bi-pencil-fill"></i>
         </button>
 
         <!-- Button Delete -->
-        <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#deleteCustomerModal"
+        <button class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteCustomerModal"
           (click)="updateQuoteToDelete(quote)">
           <i class="bi bi-trash-fill"></i>
         </button>
@@ -72,7 +72,7 @@
                 <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
                   (click)="deleteQuote()">Yes</button>
               </div>
-              
+
             </div>
           </div>
         </div>
