Evoluções na modelagem e tela de customer.

--- a/src/app/views/customer-edit/customer-edit.component.html
+++ b/src/app/views/customer-edit/customer-edit.component.html
@@ -42,12 +42,21 @@
 
       <div class="col-md-6 col-sm-12">
         <div class="mb-3">
-          <label class="form-label" for="name">Name</label>
-          <input type="text" class="form-control" id="name" name="name" [(ngModel)]="customer.name">
+          <label class="form-label" for="first_name">First Name</label>
+          <input type="text" class="form-control" id="first_name" name="first_name" [(ngModel)]="customer.first_name">
         </div>
       </div>
 
       <div class="col-md-6 col-sm-12">
+        <div class="mb-3">
+          <label class="form-label" for="last_name">Last Name</label>
+          <input type="text" class="form-control" id="last_name" name="last_name" [(ngModel)]="customer.last_name">
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
         <div class="mb-3">
           <label class="form-label" for="address">Home Address</label>
           <textarea class="form-control" id="address" name="address" rows="3" [(ngModel)]="customer.address"></textarea>
@@ -55,26 +64,62 @@
       </div>
     </div>
 
-
-
     <div class="row">
       <div class="col mb-3">
         <label class="form-label" for="phone">Phone</label>
-        <input type="text" class="form-control" id="phone" name="phone" [(ngModel)]="customer.phone">
-      </div>
-
-      <div class="col mb-3">
-        <label class="form-label" for="email">Email</label>
-        <input type="text" class="form-control" id="email" name="email" [(ngModel)]="customer.email">
+        <div class="d-flex justify-content-between align-items-center" *ngFor="let phone of customer.phones">
+          <div class="p-2">{{phone}}</div>
+          <button class="btn btn-outline-danger" type="button" (click)="removePhone(phone)">
+            <i class="bi bi-trash"></i>
+          </button>
+        </div>
+        <form class="mt-1">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Add new phone number" id="newPhone" name="newPhone"
+              [(ngModel)]="newPhone">
+            <button class="btn btn-outline-primary" type="submit" (click)="addNewPhone()">
+              <i class="bi bi-plus"></i>
+            </button>
+          </div>
+        </form>
       </div>
     </div>
 
+    <div class="row">
+      <div class="col mb-3">
+        <label class="form-label" for="email">Email</label>
+        <div class="d-flex justify-content-between align-items-center" *ngFor="let email of customer.emails">
+          <div class="p-2">{{email}}</div>
+          <button class="btn btn-outline-danger" type="button" (click)="removeEmail(email)">
+            <i class="bi bi-trash"></i>
+          </button>
+        </div>
+        <form class="mt-1">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Add new email address" id="newEmail" name="newEmail"
+              [(ngModel)]="newEmail">
+            <button type="submit" class="btn btn-outline-primary" (click)="addNewEmail()">
+              <i class="bi bi-plus"></i>
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+
+
+    <div class="row">
+      <div class="col">
+        <div class="mb-3">
+          <label class="form-label" for="notes">Notes</label>
+          <textarea class="form-control" id="notes" name="notes" rows="5" [(ngModel)]="customer.notes"></textarea>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
-<div class="d-flex justify-content-end">
+<div class="d-flex justify-content-end mb-5">
   <button class="btn btn-secondary me-3" (click)="submit()">Cancel</button>
   <button class="btn btn-primary" (click)="submit()">Save</button>
 </div>
-
-{{ customer | json }}
