--- a/src/app/views/customer-edit/customer-edit.component.html
+++ b/src/app/views/customer-edit/customer-edit.component.html
@@ -21,7 +21,7 @@
 
           <div class="modal-body">
             <p>Are you sure to delete this customer?</p>
-            <p class="text-muted">{{customerToDelete?.name}}</p>
+            <p class="text-muted">{{customerToDelete?.firstName}}</p>
           </div>
 
           <div class="modal-footer">
@@ -42,15 +42,15 @@
 
       <div class="col-md-6 col-sm-12">
         <div class="mb-3">
-          <label class="form-label" for="first_name">First Name</label>
-          <input type="text" class="form-control" id="first_name" name="first_name" [(ngModel)]="customer.first_name">
+          <label class="form-label" for="firstName">First Name</label>
+          <input type="text" class="form-control" id="firstName" name="firstName" [(ngModel)]="customer.firstName">
         </div>
       </div>
 
       <div class="col-md-6 col-sm-12">
         <div class="mb-3">
-          <label class="form-label" for="last_name">Last Name</label>
-          <input type="text" class="form-control" id="last_name" name="last_name" [(ngModel)]="customer.last_name">
+          <label class="form-label" for="lastName">Last Name</label>
+          <input type="text" class="form-control" id="lastName" name="lastName" [(ngModel)]="customer.lastName">
         </div>
       </div>
     </div>
@@ -58,8 +58,8 @@
     <div class="row">
       <div class="col">
         <div class="mb-3">
-          <label class="form-label" for="address">Home Address</label>
-          <textarea class="form-control" id="address" name="address" rows="3" [(ngModel)]="customer.address"></textarea>
+          <label class="form-label" for="homeAddress">Home Address</label>
+          <textarea class="form-control" id="homeAddress" name="homeAddress" rows="3" [(ngModel)]="customer.homeAddress"></textarea>
         </div>
       </div>
     </div>
