--- a/src/app/views/customer-list/customer-list.component.html
+++ b/src/app/views/customer-list/customer-list.component.html
@@ -25,10 +25,10 @@
   </thead>
   <tbody>
     <tr *ngFor="let customer of customers">
-      <td> {{ customer.name }} </td>
-      <td> {{ customer.address }} </td>
-      <td> {{ customer.email }} </td>
-      <td> {{ customer.phone }} </td>
+      <td> {{ customer.firstName + ' ' + customer.lastName }} </td>
+      <td> {{ customer.homeAddress }} </td>
+      <td> {{ customer.emails }} </td>
+      <td> {{ customer.phones }} </td>
       <td class="d-flex">
 
         <button class="btn btn-primary btn-sm me-2" [routerLink]="[ '/customers', customer.id ]" 
