--- a/src/app/views/deck-quote-edit/dqe-customer/dqe-customer.component.html
+++ b/src/app/views/deck-quote-edit/dqe-customer/dqe-customer.component.html
@@ -2,22 +2,22 @@
 
   <div class="col-sm-12 col-md-6 mb-3">
     <label>Name</label>
-    <input type="text" class="form-control form-control-sm" [readonly]="customer" [value]="customer?.name" />
+    <input type="text" class="form-control form-control-sm" [readonly]="customer" [value]="customer?.lastName" />
   </div>
 
   <div class="col-sm-12 col-md-6 mb-3">
     <label>Address</label>
-    <input type="text" class="form-control form-control-sm" [value]="customer?.address" />
+    <input type="text" class="form-control form-control-sm" [value]="customer?.homeAddress" />
   </div>
 
   <div class="col-sm-12 col-md-6 mb-3">
     <label>Cell Phone</label>
-    <input type="text" class="form-control form-control-sm" [value]="customer?.phone" />
+    <input type="text" class="form-control form-control-sm" [value]="customer?.phones" />
   </div>
 
   <div class="col-sm-12 col-md-6 mb-3">
     <label>E-mail</label>
-    <input type="text" class="form-control form-control-sm" [value]="customer?.email" />
+    <input type="text" class="form-control form-control-sm" [value]="customer?.emails" />
   </div>
 
 </div>
