--- a/src/app/views/customer-edit/customer-edit.component.html
+++ b/src/app/views/customer-edit/customer-edit.component.html
@@ -120,6 +120,6 @@
 </div>
 
 <div class="d-flex justify-content-end mb-5">
-  <button class="btn btn-secondary me-3" (click)="submit()">Cancel</button>
+  <button class="btn btn-secondary me-3" (click)="cancel()">Cancel</button>
   <button class="btn btn-primary" (click)="submit()">Save</button>
 </div>
