--- a/src/app/views/customer-quotes-list/customer-quotes-list.component.html
+++ b/src/app/views/customer-quotes-list/customer-quotes-list.component.html
@@ -26,16 +26,14 @@
       <div class="col-md-6 col-sm-12">
         <div class="mb-3">
           <label class="form-label" for="name">Name</label>
-          <input type="text" class="form-control" id="name" name="name" *ngIf="customer" [value]="customer.lastName"
-            readonly>
+          <div>{{customer?.firstName}} {{customer?.lastName}}</div>
         </div>
       </div>
 
       <div class="col-md-6 col-sm-12">
         <div class="col mb-3">
           <label class="form-label" for="phone">Phone</label>
-          <input type="text" class="form-control" id="phone" name="phone" *ngIf="customer" [value]="customer.phones"
-            readonly>
+          <div>{{customer?.phones}}</div>
         </div>
       </div>
 
