Job address e save da cotação.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,27 +8,27 @@
 </nav> -->
 
 <header>
-  <div class="navbar bg-primary-subtle d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-5 border-bottom" data-bs-theme="dark">
+  <div class="navbar bg-primary-subtle mb-4 py-2" data-bs-theme="dark">
     
-    <div class="container">
-      <a routerLink="/landing" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-decoration-none">
-        <i class="bi bi-house fs-1 "></i>
+    <div class="container d-flex justify-content-between">
+      <a routerLink="/landing" class="text-decoration-none d-flex justify-content-center align-items-center">
+        <i class="bi bi-house fs-3 me-1"></i>
+        <div class="fs-4">wQuote</div>
       </a>
 
-      <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <div class="nav">
         <a class="nav-link px-2 fs-6" routerLink="/">Home</a>
         <a class="nav-link px-2 fs-6" routerLink="/customers">Customers</a>
-        <!-- <a class="nav-link px-2 fs-6" routerLink="/quotes/list">Quotes</a> -->
         <a class="nav-link disabled px-2 fs-6" href="#">Admin</a>
       </div>
 
-      <div class="col-md-3 text-end">
-        <button type="button" class="btn btn-outline-primary me-2">
+      <div class="">
+        <!-- <button type="button" class="btn btn-outline-primary me-2">
           Sing up
         </button>
         <button type="button" class="btn btn-outline-primary me-2">
           Sing in
-        </button>
+        </button> -->
         <button class="btn btn-link">
           <i class="fs-5 bi bi-person-fill"></i>
         </button>
