--- a/src/app/views/customer-quotes-list/customer-quotes-list.component.html
+++ b/src/app/views/customer-quotes-list/customer-quotes-list.component.html
@@ -50,8 +50,8 @@
       <th>Type</th>
       <th>Date</th>
       <th>Profit</th>
-      <th>Total Cost</th>
-      <th>Actions</th>
+      <!-- <th>Total Cost</th> -->
+      <!-- <th>Actions</th> -->
     </tr>
   </thead>
   <tbody>
@@ -60,8 +60,8 @@
       <td> {{ this.customer?.firstName + ' ' + this.customer?.lastName }} </td>
       <td> {{ quote.type }} </td>
       <td> {{ quote.date | date }} </td>
-      <td> {{ quote.profit.toFixed(2) }} </td>
-      <td> {{ quote.total_cost.toFixed(2) }} </td>
+      <!-- <td> {{ quote.profit.toFixed(2) }} </td> -->
+      <!-- <td> {{ quote.total_cost.toFixed(2) }} </td> -->
 
       <!-- Actions -->
       <td class="d-flex">
