--- a/src/app/views/deck-quote-edit/deck-quote-edit.component.html
+++ b/src/app/views/deck-quote-edit/deck-quote-edit.component.html
@@ -37,6 +37,12 @@
   </div>
 </div>
 
+<div class="d-flex justify-content-center">
+  <button class="btn btn-primary my-4" (click)="save()">
+    <i class="bi bi-save me-1"></i>
+    Save
+  </button>
+</div>
 
 
 
