--- a/src/app/views/deck-quote-edit/dqe-customer/dqe-customer.component.html
+++ b/src/app/views/deck-quote-edit/dqe-customer/dqe-customer.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-5">
+<div class="row">
 
   <div class="col-sm-12 col-md-6 mb-3">
     <label>First Name</label>
@@ -43,7 +43,7 @@
     </div>
     <div class="my-2" *ngIf="deckQuote?.jobAddress == newAddress">
       <input type="text" class="form-control" id="newAddress" name="newAddress" [(ngModel)]="newAddress"
-        (ngModelChange)="changeJobAddress(newAddress)">
+        (ngModelChange)="changeJobAddress(newAddress)" placeholder="Type a new address">
     </div>
   </div>
 
